force-app/main/default/objects/Asset/fields/Assigned_Members__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Members__c</fullName>
    <label>Assigned Members</label>
    <summaryFilterItems>
        <field>Entitlement__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Entitlement__c.Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>