force-app/main/default/objects/Asset/fields/Global_Partner__c.field-meta.xml
<CustomField>
    <fullName>Global_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal lookup to the Global Partner (Account). Populated by staff/automation; activation still required.</description>
    <inlineHelpText>Internal lookup to the Global Partner (Account). Populated by staff/automation; activation still required.</inlineHelpText>
    <label>Global Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Global Partner Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>