force-app/main/default/objects/Asset/fields/Remaining_Memberships_to_Assign__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Memberships_to_Assign__c</fullName>
    <formula>CurrentQuantity - Assigned_Members__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Memberships to Assign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>