force-app/main/default/objects/Asset/fields/Total_Asset_Entitlements__c.field-meta.xml
<CustomField>
    <fullName>Total_Asset_Entitlements__c</fullName>
    <label>Total Asset Entitlements</label>
    <summaryForeignKey>Entitlement__c.Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>