force-app/main/default/objects/Asset/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Global_Partner__c)),
  &quot;Global Partner&quot;,
  IF(
    TEXT(Product2.Family) = &quot;Enterprise Membership&quot;,
    &quot;Enterprise&quot;,
    IF(
      TEXT(Product2.Family) = &quot;Membership&quot;,
      &quot;Individual&quot;,
      &quot;&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>